// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActivityDescription/> renders the component with activity fully completed 1`] = `
<div
  className="cl-activity-description"
>
  <div
    className="cl-activity-prop cl-activity-type"
  >
    Iphone
    <span
      className="tag success sm cl-tag"
    >
      This device
    </span>
  </div>
  <div
    className="cl-activity-prop cl-activity-browser"
  >
    Safari 10
  </div>
  <div
    className="cl-activity-prop cl-activity-ipAddress"
  >
    123.123.123.123
  </div>
  <div
    className="cl-activity-prop cl-activity-location"
  >
    Athens, Greece
  </div>
  <div
    className="cl-activity-prop cl-activity-last-active-at"
  >
    1/1/2021
  </div>
</div>
`;

exports[`<ActivityDescription/> renders the component with empty activity 1`] = `
<div
  className="cl-activity-description"
>
  <div
    className="cl-activity-prop cl-activity-type"
  >
    Desktop device
    <span
      className="tag success sm cl-tag"
    >
      This device
    </span>
  </div>
  <div
    className="cl-activity-prop cl-activity-browser"
  >
    Web browser
  </div>
  <div
    className="cl-activity-prop cl-activity-last-active-at"
  >
    1/1/2021
  </div>
</div>
`;

exports[`<ActivityDescription/> renders the component with ip if location is empty 1`] = `
<div
  className="cl-activity-description"
>
  <div
    className="cl-activity-prop cl-activity-type"
  >
    Iphone
    <span
      className="tag success sm cl-tag"
    >
      This device
    </span>
  </div>
  <div
    className="cl-activity-prop cl-activity-browser"
  >
    Safari 10
  </div>
  <div
    className="cl-activity-prop cl-activity-ipAddress"
  >
    123.123.123.123
  </div>
  <div
    className="cl-activity-prop cl-activity-last-active-at"
  >
    1/1/2021
  </div>
</div>
`;
